--- a/.chezmoiscripts/run_once_install-python-tools.tmpl
+++ b/.chezmoiscripts/run_once_install-python-tools.tmpl
@@ -1,6 +1,8 @@
 {{- if hasKey .scripts "python-tools" -}}
 #!/usr/bin/env bash
 
+{{ template "bash_helpers.tmpl" . }}
+
 ################################################################################
 # Install Python tools
 #
@@ -16,13 +18,15 @@
 #
 # See https://pipx.pypa.io/stable/comparisons/
 
-if ! which pip >/dev/null 2>&1 || ! which pip3 >/dev/null 2>&1; then
-  version=$(apt-cache policy pip3 | grep Candidate | awk '{print $2}')
-  echo "🚀 Installing pip version ${version} directly from apt"
-  sudo apt install -qq -y python3-pip >/dev/null 2>&1
+
+if ! which pip &>/dev/null || ! which pip3 &>/dev/null; then
+  pkg=python3-pip
+  {{ template "bash_install_pkg.tmpl" . }}
 fi
 
-version=$(apt-cache policy pipx | grep Candidate | awk '{print $2}')
+
+pkg=pipx
+version=$(get_version $pkg)
 if [ -z "$version" ]; then
   echo "❌ pipx is not available in the apt repository."
 
@@ -30,15 +34,12 @@ if [ -z "$version" ]; then
 
   echo "🚀 Installing pipx version ${version} from pip"
   python3 -m pip install --user pipx
-
 else
-
-  echo "🚀 Installing pipx version ${version} directly from apt"
-  sudo apt install -qq -y pipx >/dev/null 2>&1
+  {{ template "bash_install_pkg.tmpl" . }}
 fi
 
 echo "⚙️ Configuring pipx"
-python3 -m pipx ensurepath 2>&1 | sed 's/^/    /'
+python3 -m pipx ensurepath -qq --force &>/dev/null
 # sudo pipx ensurepath --global # optional to allow pipx actions with --global argument
 
 {{ end -}}
