feat: add new qalc alias and fix missing /home/ppcamp/.cache/zsh/zsh_history creation

--- a/.chezmoiscripts/run_once_install-zsh.tmpl
+++ b/.chezmoiscripts/run_once_install-zsh.tmpl
@@ -12,4 +12,13 @@ echo "⚙️ Setting zsh as default shell"
 printf "    "
 chsh -s $(which zsh)
 
+
+# create file $HISTFILE, otherwise, we'll loose track of history everytime startsup
+#  see $HISTFILE variable inside $ZEN folder
+#   ($HOME/.config/shell/internal/configs/variables.zsh)
+
+echo "⚙️ Creating history file (see $HISTFILE)."
+mkdir -p $HOME/.cache/zsh/
+touch $HOME/.cache/zsh/zsh_history
+
 {{ end -}}
