--- a/.chezmoiscripts/run_once_install-flatpak.tmpl
+++ b/.chezmoiscripts/run_once_install-flatpak.tmpl
@@ -39,6 +39,6 @@ flatpak override --user --env=GTK_THEME=Adwaita:dark
 # sudo apt autopurge -y flatpak
 {{ end -}}
 
-printf "   \033[32m💡 Tip:\033[0m Install 'Flatseal' to control perm 'flatpak install com.github.tchx84.Flatseal.flatpakref'\n"
+echo -e "   \e[32m💡 Tip:\e[0m Install 'Flatseal' to control perm 'flatpak install com.github.tchx84.Flatseal.flatpakref'"
 
 {{ end -}}
