feat: add new track alias

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -144,6 +144,7 @@ sw = switch                   # (it requires to have installed the gitx plugin)
 swx = !gitx --run branches    # (it requires to have installed the gitx plugin)
 sync = !git f && git p        # (fetch and pull) example: <git sync>
 tags = !gitx --run tags       # (it requires to have installed the gitx plugin)
+track = ls --full-history --  # shows the history of a path/file (e.g, git track file.go)
 unmodule = submodule deinit -f
 unstage = restore --staged
 unstage-all = unstage -S .
