--- a/.chezmoiscripts/run_once_install-bsdtar.tmpl
+++ b/.chezmoiscripts/run_once_install-bsdtar.tmpl
@@ -9,7 +9,7 @@
 
 pkg=bsdtar
 
-{{- if eq .chezmoi.osRelease.id "debian" }}
+{{- if eq .configs.os "deb" }}
 	binName=libarchive-tools
 {{ end -}}
 
