fix: git abbrev to 7 chars, instead of 8
With this, we'll use the same length as Github.

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -38,6 +38,7 @@ defaultBranch = main
 [core]
 editor = nvim #code --wait
 pager = less -IR -
+abbrev=7 
 
 [diff]
 # diffstatic is just a post-processor visualizer for unified diffs
