feat: add toolbx containerized tool

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -106,6 +106,7 @@ See:
   "shfmt"
   "sqlfluff"
   "starship"
+  "toolbx"
   "tlrc"
   "xcp"
   "xpb"
@@ -121,20 +122,26 @@ See:
   "diffstatic"
   "eza"
   "fd"
+  "flatpak"
+  "flatpak-fix-dark-theme"
   "fzf"
   "gitx"
+  "gum"
+  "hyperfine"
+  "just"
   "kitty"
   "lazygit"
   "nvim"
   "perm"
   "pet"
+  "podman"
   "procs"
-  "python-tools"
   "rg"
   "sd"
   "shfmt"
   "sqlfluff"
   "starship"
+  "toolbx"
   "tlrc"
   "xcp"
   "xpb"
