--- a/.chezmoiscripts/run_once_install-asdf.tmpl
+++ b/.chezmoiscripts/run_once_install-asdf.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "asdf" -}}
+{{- if has "asdf" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs asdf-vm, a version manager for multiple languages.
