--- a/.chezmoiscripts/run_once_install-bat.tmpl
+++ b/.chezmoiscripts/run_once_install-bat.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "bat" -}}
+{{- if has "bat" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs bat, a cat clone with syntax highlighting and Git
