--- a/.chezmoiscripts/run_once_install-btop.tmpl
+++ b/.chezmoiscripts/run_once_install-btop.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "btop" -}}
+{{- if has "btop" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs btop, a resource monitor that shows system usage and
