--- a/.chezmoiscripts/run_once_install-choose.tmpl
+++ b/.chezmoiscripts/run_once_install-choose.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "choose" -}}
+{{- if has "choose" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs choose, a command-line tool for selecting items from a
