--- a/.chezmoiscripts/run_once_install-diffstatic.tmpl
+++ b/.chezmoiscripts/run_once_install-diffstatic.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "diffstatic" -}}
+{{- if has "diffstatic" .scripts -}}
 #!/usr/bin/env bash
 
 # Install difftastic, a syntax-aware diff tool.
