--- a/.chezmoiscripts/run_once_install-eza.tmpl
+++ b/.chezmoiscripts/run_once_install-eza.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "eza" -}}
+{{- if has "eza" .scripts -}}
 #!/usr/bin/env bash
 
 # Install eza, a modern replacement for ls with git integration and icons.
