--- a/.chezmoiscripts/run_once_install-fd.tmpl
+++ b/.chezmoiscripts/run_once_install-fd.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "fd" -}}
+{{- if has "fd" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs fd, a simple, fast and user-friendly alternative to
