--- a/.chezmoiscripts/run_once_install-fzf.tmpl
+++ b/.chezmoiscripts/run_once_install-fzf.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "fzf" -}}
+{{- if has "fzf" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs fzf, a command-line fuzzy finder.
