--- a/.chezmoiscripts/run_once_install-gum.tmpl
+++ b/.chezmoiscripts/run_once_install-gum.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "gum" -}}
+{{- if has "gum" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs gum, a command-line tool for creating interactive
