--- a/.chezmoiscripts/run_once_install-just.tmpl
+++ b/.chezmoiscripts/run_once_install-just.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "just" -}}
+{{- if has "just" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs just, a command-line tool for running commands defined
