--- a/.chezmoiscripts/run_once_install-kitty.tmpl
+++ b/.chezmoiscripts/run_once_install-kitty.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "kitty" -}}
+{{- if has "kitty" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs the latest version of kitty from the official GitHub
