--- a/.chezmoiscripts/run_once_install-lazygit.tmpl
+++ b/.chezmoiscripts/run_once_install-lazygit.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "lazygit" -}}
+{{- if has "lazygit" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs lazygit, a terminal UI for git commands.
