--- a/.chezmoiscripts/run_once_install-nvim.tmpl
+++ b/.chezmoiscripts/run_once_install-nvim.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "nvim" -}}
+{{- if has "nvim" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs the latest version of Neovim (nvim) from the official
