--- a/.chezmoiscripts/run_once_install-zoxide.tmpl
+++ b/.chezmoiscripts/run_once_install-zoxide.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "zoxide" -}}
+{{- if has "zoxide" .scripts -}}
 #!/usr/bin/env bash
 
 echo "🚀 Installing zoxide latest version"
