--- a/.chezmoiscripts/run_onchange_tools_scripts_gitx.tmpl
+++ b/.chezmoiscripts/run_onchange_tools_scripts_gitx.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "gitx" -}}
+{{- if has "gitx" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs gitx, a command-line tool for managing Git repositories.
