--- a/.chezmoiscripts/run_onchange_tools_scripts_perm.tmpl
+++ b/.chezmoiscripts/run_onchange_tools_scripts_perm.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "perm" -}}
+{{- if has "perm" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs perm, a command-line tool for managing permissions.
