--- a/.chezmoiscripts/run_onchange_tools_scripts_xcp.tmpl
+++ b/.chezmoiscripts/run_onchange_tools_scripts_xcp.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "xcp" -}}
+{{- if has "xcp" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs xcp, a command-line tool for copying text to the
