--- a/.chezmoiscripts/run_once_install-python-tools.tmpl
+++ b/.chezmoiscripts/run_once_install-python-tools.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "python-tools" -}}
+{{- if has "python-tools" .scripts -}}
 #!/usr/bin/env bash
 
 {{ template "bash_helpers.tmpl" . }}
