--- a/.chezmoiscripts/run_once_install-sqlfluff.tmpl
+++ b/.chezmoiscripts/run_once_install-sqlfluff.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "sqlfluff" -}}
+{{- if has "sqlfluff" .scripts -}}
 #!/usr/bin/env bash
 
 {{ template "bash_helpers.tmpl" . }}
