--- a/.chezmoiscripts/run_once_install-toolbx.tmpl
+++ b/.chezmoiscripts/run_once_install-toolbx.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "toolbx" -}}
+{{- if has "toolbx" .scripts -}}
 #!/usr/bin/env bash
 
 {{ template "bash_helpers.tmpl" . }}
@@ -10,7 +10,7 @@
 #
 # See https://containertoolbx.org/
 
-pkg=toolbx
+pkg=toolbox
 
 {{ template "bash_install_pkg.tmpl" . }}
 
