--- a/.chezmoiscripts/run_onchange_tools_scripts_xpb.tmpl
+++ b/.chezmoiscripts/run_onchange_tools_scripts_xpb.tmpl
@@ -1,4 +1,4 @@
-{{- if hasKey .scripts "xpb" -}}
+{{- if has "xpb" .scripts -}}
 #!/usr/bin/env bash
 
 # This script installs xcp, a command-line tool for copying text to the
