fix: eval starship at shell init, instead of using pre-generated

--- a/.chezmoiscripts/run_once_install-zsh.tmpl
+++ b/.chezmoiscripts/run_once_install-zsh.tmpl
@@ -21,4 +21,6 @@ echo "   ⚙️ Creating history file (see \$HISTFILE)."
 mkdir -p $HOME/.cache/zsh/
 touch $HOME/.cache/zsh/zsh_history
 
+echo "   ⚙️ You need to lougout to start using zsh by default."
+
 {{ end -}}
