--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -112,7 +112,7 @@ dt = difftool --word-diff
 dts = dt --staged
 exist-remote = ls-remote --heads origin # (check if exist in remote) example: <git exist-remote branchName>
 f = fetch --prune
-gcf = gc --agressive # optimize the repository, (also use git f) example: <git optmize> (see git gc)
+gcf = gc --aggressive # optimize the repository, (also use git f) example: <git optmize> (see git gc)
 gg = grep --break --heading --line-number --color
 graph = ls --graph # example: <git graph develop feature/some-14> or just <git graph>
 graphx = graph --abbrev-commit --all
