fix: wayland templating

--- a/.chezmoiscripts/run_onchange_tools_scripts_xpb.tmpl
+++ b/.chezmoiscripts/run_onchange_tools_scripts_xpb.tmpl
@@ -15,7 +15,7 @@
 
   {{- if eq (env "XDG_SESSION_TYPE") "wayland" }}
     pkg=wl-clipboard
-  {{- else if eq .Env.XDG_SESSION_TYPE "x11" }}
+  {{- else if eq (env "XDG_SESSION_TYPE") "x11" }}
     pkg=xclip
   {{- end }}
 
