--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -97,6 +97,7 @@ See:
   "kitty"
   "lazygit"
   "nvim"
+  "pass"
   "perm"
   "pet"
   "python-tools"
@@ -133,6 +134,7 @@ See:
   "kitty"
   "lazygit"
   "nvim"
+  "pass"
   "perm"
   "pet"
   "procs"
