--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -86,6 +86,7 @@ See:
   "diffstatic"
   "distrobox"
   "eza"
+  "entr"
   "fd"
   "flatpak"
   "flatpak-fix-dark-theme"
@@ -123,6 +124,7 @@ See:
   "choose"
   "diffstatic"
   "eza"
+  "entr"
   "fd"
   "flatpak"
   "flatpak-fix-dark-theme"
