feat: add duckdb

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -85,6 +85,7 @@ See:
   "debug-tools"
   "diffstatic"
   "distrobox"
+  "duckdb"
   "eza"
   "entr"
   "fd"
@@ -123,6 +124,7 @@ See:
   "btop"
   "choose"
   "diffstatic"
+  "duckdb"
   "eza"
   "entr"
   "fd"
