feat: gitconfig changes

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -114,6 +114,7 @@ dts = dt --staged
 exist-remote = ls-remote --heads origin # (check if exist in remote) example: <git exist-remote branchName>
 f = fetch --prune
 gcf = gc --aggressive # optimize the repository, (also use git f) example: <git optmize> (see git gc)
+ga = grep --color -G # <git ga 'stringToSearch' README.md>
 gg = grep --break --heading --line-number --color
 graph = ls --graph # example: <git graph develop feature/some-14> or just <git graph>
 graphx = graph --abbrev-commit --all
@@ -128,6 +129,7 @@ local-branches = !git branch -v | cut -c 3- | awk '{ print $2\" \"$1 }'         
 log-deleted = log --diff-filter=D --                                                                                                                   # (show logged files, alternativaly, you can pass a directory to search for) example: <git log-deleted>
 ls = log --format=format:'%C(bold yellow)%h%C(reset) %C(reset)%s%C(bold blue)%d%C(reset) %C(dim white)%an [%G?] (%ad, %ar)%C(reset)' --decorate --date=short # alternative to <git log>, example: <git ls>
 lsp = ls --follow --first-parent # show merges commits only
+merges = ls --merges # merges main..develop
 new = switch --create                                                                                                                                      # (create new branches) example: <git new branchName>
 p = pull
 pr = pull --rebase
@@ -146,11 +148,10 @@ sw = switch                   # (it requires to have installed the gitx plugin)
 swx = !gitx --run branches    # (it requires to have installed the gitx plugin)
 sync = !git f && git p        # (fetch and pull) example: <git sync>
 tags = !gitx --run tags       # (it requires to have installed the gitx plugin)
-track = ls --follow --full-history --  # shows the history of a path/file (e.g, git track file.go)
+what = ls --follow --full-history --  # (whatchanged) shows the history of a path/file (e.g, git track file.go)
 unmodule = submodule deinit -f
 unstage = restore --staged
 unstage-all = unstage -S .
-what = whatchanged
 wip = !git add -A && git commit -m 'WIP' # Work In Progress commit
 wipb = switch --create wip # Work In Progress commit
 worktrees = !gitx --run worktrees        # (it requires to have installed the gitx plugin)
